# agentguard

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: test.yml
cli/: banner.py  config.py  main.py  output.py
cli/commands/: baseline.py  diff.py  init.py  rules.py  scan.py
core/: baseline.py  capabilities.py  introspect.py  manifest.py  models.py
core/detectors/: builtin.py  engine.py
rules/: default.yaml
tests/: test_baseline.py  test_capabilities.py  test_cli.py  test_detectors.py  test_evasion.py  test_false_positives.py  test_hostile_server.py  test_malformed_rules.py  test_manifest.py  test_output_security.py
tests/fixtures/: clean_manifest.json  clean_manifest_v2.json  dummy_stdio_server.py  hostile_stdio_server.py  risky_manifest.json
