[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentguard"
version = "0.1.0"
description = "Static + live risk scanning for MCP tool manifests."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "csinexus" }]
keywords = ["mcp", "model-context-protocol", "security", "static-analysis", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "rich>=13.0",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/csinexus/agentguard"
Repository = "https://github.com/csinexus/agentguard"
Issues = "https://github.com/csinexus/agentguard/issues"

[project.scripts]
agentguard = "cli.main:main"

[tool.setuptools]
packages = ["cli", "cli.commands", "core", "core.detectors", "rules"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]
